# querytorque_v8

./: .env.example  .gitignore  .gitmodules  BENCHMARKS.md  BUILD_PLAN.md  CLAUDE.md  Databricks Game Plan.md  PLAN.md  PRD.md  PRD_COMBINED_v2.md  PRESENTATION_1PAGE_SUMMARY.md  PRESENTATION_GUIDE.md  Q23_TEST_STATUS.md  QueryTorque_SQL_Extension_PRD.md  README.md  RETRY_LIST_FULL_099.json  RUN_ALL_99_QUERIES.md  RUN_V5_TEST.md  SEMANTIC_VALIDATION_IMPLEMENTATION.md  WORKING_MEMORY.md  accurate_debug_q74.py  alembic.ini  analyze_rule_effectiveness.py  compare_responses_detail.py  docker-compose.yml  enhanced_rule_analysis.py  extract_all_99_state_histories.py  gold_examples_duckdb.json  package-lock.json  package.json  pattern_selector_prompt.txt  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  rbot_speedup_table.py  recent_files.txt  recent_files_full.txt  snipe_prompt_preview.txt  snipe_test_query80_prompt.txt  (+17 more)
Q-Error/: DEEP_ANALYSIS.txt  RESULTS_GOLD_EXAMPLES.md  RESULTS_TPCDS_BENCHMARK.md  analyze_tpcds_benchmark.py  results_all_gold_examples.csv  results_tpcds_benchmark.csv
alembic/: env.py
docs/: ADAPTIVE_REWRITER_V5_VALIDATION_REPORT.md  CLAUDE.md  DOCS_CATALOG_AND_CLEANUP_PLAN.md  ML_IMPLEMENTATION_SUMMARY.md  NEXT_STEPS.md  POSTGRES_SETUP.md  READY_TO_TEST.md  RECOMMENDATION_REPORT_SUMMARY.md  RULE_ANALYSIS_SUMMARY.md  RULE_QUICK_REFERENCE.md  RUN_20_WORKERS.md  RUN_ALL_99_QUERIES.md  RUN_V5_TEST.md  V5_IMPLEMENTATION_COMPLETE.md  V5_IMPLEMENTATION_VERIFIED.md  V5_REVIEW_SUMMARY.md  cleanup_docs.sh  gold_detector_completion.md  metrics_targets.md  ml_pipeline_plan.md  postgres_5433_connection.md  pushdown_analysis_q74_q73.md  rbot_paper_summary.md  refactor_audit.md  rule_combinations.json  rule_effectiveness_analysis.csv  rule_effectiveness_analysis.md  rule_effectiveness_detailed.md  rule_effectiveness_report.md  rule_naming_migration.md  tpcds_ast_analysis.json
e2e/: debug_strike.spec.ts  fleet_c2.spec.ts
findings/: extraction_2026-02-10T23-49-46.986833.json
landing_page/: dialectlabs.jsx  index.html  querytorque.jsx
paper/: CASE_STUDY_CALCITE_VS_LLM.md  DOSSIER_cost_model_unreliability.md  README.md  build_pdf.py  latex_includes.tex  paper_final_plan.md  query-swarm-architecture-v1.md  querytorque.aux  querytorque.out  querytorque.tex
qt-synth/: README.md  README_MVROWS.md  README_MVROWS_ONE_ROW.md  __init__.py  build_dsb76_synthetic_db.py  build_minimal_synthetic_db.py  check_equivalence.py  compare_costs.py  compare_explain_costs.py  compare_plans.py  equivalence_results.json  mvrows_one_row_equiv_eval.json  patch_packs.py  repair_dsb76_synthetic_db.py  run_mvrows_one_row_eval.py  sf10_explain_check.py  sql_to_tree.py  synthetic_validator.py  test_join.sql  test_query.sql  test_tpcds_q10.sql  test_tpcds_q2.sql  validator.py  validator_v2.py
research/: BEAM_VS_SWARM_PG_DSB.md  BEST_OPTIMIZATIONS.md  DSB_LEADERBOARD.md  ENGINE_COMPARISON_DUCKDB_VS_POSTGRESQL.md  GOLD_LEADERBOARD_DUCKDB_TPCDS.csv  GOLD_LEADERBOARD_PG_DSB.csv  OPTIMIZATION_PROMPT_RESEARCH.md  PG_DSB_76_POST_RUN_ANALYSIS.md  PLAN_EXPLORATION_INTELLIGENCE.md  PROMPT_SYSTEM.md  README.md  VALIDATE_QUICK_START.md  VALIDATION_GUIDE.md  VALIDATION_README.md  VALIDATION_SUMMARY.md  analysis_20260212_benchmark.md  benchmark_retry_pairs.py  build_combined_pg_board.py  build_gold.py  build_history.py  compare_old_vs_new.py  concurrent_race.py  config_tuning_batch.py  config_tuning_full.py  config_tuning_hints.py  config_tuning_pass2.py  config_tuning_pass3.py  config_tuning_pass4.py  cost_vs_speedup.csv  (+32 more)
(+9846 files in other folders)
