[project]
name = "querytorque"
version = "0.1.0"
description = "QueryTorque - SQL and DAX query optimization platform"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "QueryTorque", email = "support@querytorque.com"}
]
keywords = ["sql", "dax", "optimization", "analysis", "querytorque"]

# Workspace root - no direct dependencies
# All dependencies are in individual packages
dependencies = []

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
    # Linting
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    # Type stubs
    "types-stripe>=3.5.0",
    # Documentation
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    # Development
    "pre-commit>=3.7.0",
    "ipython>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
# Root package is a workspace, not directly buildable
skip-excluded-dirs = true

# Workspace configuration
[tool.hatch.envs.default]
type = "virtual"
path = ".venv"
dependencies = [
    "qt-shared @ {root}/packages/qt-shared",
    "qt-sql @ {root}/packages/qt-sql",
    "qt-dax @ {root}/packages/qt-dax",
]

[tool.hatch.envs.default.scripts]
# Development commands
dev-sql = "uvicorn qt_sql.api.main:app --reload --port 8002"
dev-dax = "uvicorn qt_dax.api.main:app --reload --port 8003"
test = "pytest {args}"
test-cov = "pytest --cov=packages --cov-report=term-missing {args}"
lint = "ruff check packages"
format = "ruff format packages"
typecheck = "mypy packages"

# Database commands
db-upgrade = "alembic upgrade head"
db-downgrade = "alembic downgrade -1"
db-migrate = "alembic revision --autogenerate -m {args}"

[tool.hatch.envs.test]
dependencies = [
    "qt-shared[dev] @ {root}/packages/qt-shared",
    "qt-sql[dev] @ {root}/packages/qt-sql",
    "qt-dax[dev] @ {root}/packages/qt-dax",
]

# Ruff configuration
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["packages"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise without from inside except
]

[tool.ruff.lint.isort]
known-first-party = ["qt_shared", "qt_sql", "qt_dax"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# MyPy configuration
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "sqlglot.*",
    "duckdb.*",
    "stripe.*",
    "anthropic.*",
    "groq.*",
    "google.*",
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages/*/tests"]
addopts = "-ra -q"
filterwarnings = [
    "ignore::DeprecationWarning",
]

# Coverage configuration
[tool.coverage.run]
source = ["packages"]
omit = ["*/tests/*", "*/__pycache__/*"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
